# ai-starter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
src/: ollama_example.py
