[project]
name = "ai-starter"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llm-sandbox>=0.2.4",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.4",
    "pydantic-ai>=0.1.9",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "mypy>=1.15.0",
    "poethepoet>=0.34.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "PGH003", "COM812"]

[tool.poe.tasks]
typecheck = { shell = "mypy -p src -p tests", help = "Run mypy to type check the project." }


[tool.poe.tasks.fmt]
shell = "ruff check --select I --fix && ruff format"
help = "Format the project with ruff"
